<resources>
    <string name="app_name">My Application</string>
    <string name="login">login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Logout</string>
    <string name="Login">login\n</string>
    <string name="Loginn">login</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="tempAdd">TempAdd</string>
    <string name="openGateManually">OpenGateManually</string>
    <string name="plateno">PlateNo</string>
    <string name="requests">Requests</string>
    <string name="EntranceHistory">EntranceHistory</string>
    <string name="registeredResidents">RegisteredResidents</string>
    <string name="camera">Camera</string>
    <string name="allowedPlates">AllowedPlates</string>
    <string name="addDeleteResidents">AddDeleteResidents</string>
    <string name="history">History</string>
    <string name="back">Back</string>
    <string name="platesAllowed">PlatesAllowed</string>
    <string name="backtwo">Backtwo</string>
    <string name="back2">Backtwo</string>
    <string name="allowedplates">AllowedPlates</string>
    <string name="residents">Residents</string>
    <string name="addResidents">AddResidents</string>
    <string name="deleteResidents">DeleteResidents</string>
    <string name="accept">Accept\n</string>
    <string name="deny">Deny</string>
    <string name="livePhotoRequest">LivePhotoRequest</string>
    <string name="deleteAccount">DeleteAccount</string>
    <string name="warning">Warning</string>
    <string name="garage">Garage</string>
</resources>