<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    tools:context=".UserPage">

    <Button
        android:id="@+id/btn_openGate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/openGateManually" />

    <EditText
        android:id="@+id/plateNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/plateno" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:onClick="handleText"
        android:text="@string/add" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:onClick="handleText2"
        android:text="@string/delete" />

    <Button
        android:id="@+id/btn_tempAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="handleText3"
        android:text="@string/tempAdd" />
    <Button
        android:id="@+id/btn_deleteAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="handleText22"
        android:text="@string/deleteAccount" />
    <Button
        android:id="@+id/logout"
        android:text="@string/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textViewGarage"
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:text="@string/garage" />

    <TextView
        android:id="@+id/textViewWarning"
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:text="@string/warning" />


</LinearLayout>