<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    tools:context=".UserPage">

    <Button
        android:id="@+id/btn_requests"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:text="@string/requests" />


    <Button
        android:id="@+id/btn_entranceHistory"
        android:layout_width="174dp"
        android:layout_height="wrap_content"

        android:text="@string/EntranceHistory" />

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="173dp"
        android:layout_height="wrap_content"

        android:text="@string/camera" />

    <Button
        android:id="@+id/btn_allowedPlates"
        android:layout_width="176dp"
        android:layout_height="wrap_content"

        android:text="@string/allowedPlates" />
    <Button
        android:id="@+id/btn_addDeleteResidents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/addDeleteResidents" />
    <Button
        android:id="@+id/logout"
        android:text="@string/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/textViewWarning"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:text="@string/warning" />






</LinearLayout>