<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    tools:context=".Residents">
    <TextView
        android:id="@+id/textViewResidents"
        android:layout_width="match_parent"
        android:layout_height="143dp"
        android:text="@string/residents" />

    <Button
        android:id="@+id/btn_addResidents"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:text="@string/addResidents" />

    <Button
        android:id="@+id/btn_deleteResidents"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:onClick="handleText5"
        android:text="@string/deleteResidents" />
    <Button
        android:id="@+id/btn_backResidents"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:text="@string/back" />

</LinearLayout>